test/classes/initializers/parentCall/inOnCobegin.good
inOnCobegin.chpl:4: In initializer:
inOnCobegin.chpl:8: error: use of super.init() call in a parallel statement
